Fix alignment button on mobile share button

--- a/src/panels/ShareModelPanel/share-model.scss
+++ b/src/panels/ShareModelPanel/share-model.scss
@@ -4,6 +4,10 @@
   .title-wrapper {
     display: flex;
 
+    .p-button--base.has-icon {
+      display: flex;
+    }
+
     .p-icon--chevron-up {
       display: block;
       padding-right: 1rem;
